--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -1,10 +1,12 @@
 name: Generate Daily Blog Post
 
 on:
+
   workflow_dispatch:
   schedule:
     - cron: '0 5 * * *'
-
+permissions:
+  contents: write
 jobs:
   build:
     runs-on: ubuntu-latest
