--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "build-blog": "node scripts/generate-blog.mjs"
   },
   "dependencies": {
-    "rss-parser": "^3.13.0",
+    "cheerio": "^1.1.2",
+    "dayjs": "^1.11.11",
     "fs-extra": "^11.2.0",
-    "dayjs": "^1.11.11"
+    "rss-parser": "^3.13.0"
   }
 }
