--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build-blog": "node scripts/generate-blog.mjs"
+    "build-blog": "node scripts/generate-blog.mjs",
+    "enrich-blog": "node scripts/enrich.mjs"
   },
   "dependencies": {
-    "rss-parser": "^3.13.0",
+    "@extractus/article-extractor": "^8.0.20",
+    "@xenova/transformers": "^2.17.2",
+    "dayjs": "^1.11.11",
     "fs-extra": "^11.2.0",
-    "dayjs": "^1.11.11"
+    "rss-parser": "^3.13.0"
   }
 }
