--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -1,10 +1,9 @@
 name: Generate Daily Blog Post
 
 on:
-
-  workflow_dispatch:
   schedule:
-    - cron: '0 5 * * *'
+    - cron: '0 7 * * *'
+      timeZone: 'Europe/Paris'
 permissions:
   contents: write
 jobs:
