--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build-blog": "node scripts/generate-blog.mjs"
+    "build-blog": "node scripts/generate-blog.mjs",
+    "enrich-blog": "node scripts/enrich.mjs"
   },
   "dependencies": {
     "cheerio": "^1.1.2",
     "dayjs": "^1.11.11",
     "fs-extra": "^11.2.0",
-    "rss-parser": "^3.13.0"
+    "rss-parser": "^3.13.0",
+    "@extractus/article-extractor": "^8.0.1",
+    "@xenova/transformers": "^2.16.1"
   }
 }
